	* make get_settings available in the python binding regardless of deprecated functions
	* fix typo in python settings binding
	* fix possible dangling pointer use in peer list
	* fix support for storing arbitrary data in the DHT
	* fixed bug in uTP packet circle buffer
	* fix potential crash when using torrent_handle::add_piece
	* added missing add_torrent_alert to python binding

0.16.5 release

	* udp socket refcounter fix
	* added missing async_add_torrent to python bindings
	* raised the limit for bottled http downloads to 2 MiB
	* add support for magnet links and URLs in python example client
	* fixed typo in python bindings' add_torrent_params
	* introduce a way to add built-in plugins from python
	* consistently disconnect the same peer when two peers simultaneously connect
	* fix local endpoint queries for uTP connections
	* small optimization to local peer discovery to ignore our own broadcasts
	* try harder to bind the udp socket (uTP, DHT, UDP-trackers, LSD) to the same port as TCP
	* relax file timestamp requirements for accepting resume data
	* fix performance issue in web seed downloader (coalescing of blocks sometimes wouldn't work)
	* web seed fixes (better support for torrents without trailing / in web seeds)
	* fix some issues with SSL over uTP connections
	* fix UDP trackers trying all endpoints behind the hostname

0.16.4 release

	* raise the default number of torrents allowed to announce to trackers to 1600
	* improve uTP slow start behavior
	* fixed UDP socket error causing it to fail on Win7
	* update use of boost.system to not use deprecated functions
	* fix GIL issue in python bindings. Deprecated extension support in python
	* fixed bug where setting upload slots to -1 would not mean infinite
	* extend the UDP tracker protocol to include the request string from the tracker URL
	* fix mingw build for linux crosscompiler

0.16.3 release

	* fix python binding backwards compatibility in replace_trackers